fix overflow -x and footer margin-bottom

--- a/responsive.css
+++ b/responsive.css
@@ -4,6 +4,7 @@
     font-size: 85%;
     font-family: "gilroy-medium", sans-serif;
   }
+
   body {
     overflow-x: hidden;
   }
@@ -131,6 +132,7 @@
     height: 3rem;
     margin-top: 20rem;
     margin-left: 20%;
+    margin-bottom: 5rem;
   }
   .footer {
     height: 100%;
@@ -257,9 +259,20 @@
   .blue--bgrcl {
     margin-top: 1rem;
   }
+  .sub--ft-ct {
+    margin-bottom: 4rem;
+  }
 }
+
 /* RESSPONSIVE SMALL PHONE SCREEN: 600px(37.5em) */
 @media (max-width: 37.5em) {
+  main,
+  header,
+  article,
+  summary,
+  footer,
+  .article--grid--container,
+  .accordion--container,
   body {
     overflow-x: hidden;
   }
@@ -348,12 +361,19 @@
     border: none;
     margin-top: 1.5rem;
   }
+  .sub--ft-ct {
+    margin-bottom: 5rem;
+  }
 }
 /* 
 *THIS SECTION WAS RESERVED TO DEAL WITH SLASHED ABSOLUTE 
 *POSITIONED IMAGE
 */
 @media (max-width: 63em) {
+  main,
+  header,
+  article,
+  summary,
   body {
     overflow-x: hidden;
   }
@@ -361,17 +381,12 @@
     display: inline-block;
     width: 100%;
     height: 100%;
-    transform: translate(10%, -600%);
+    transform: translate(10%, -100%);
   }
 }
 @media (max-width: 59.375em) {
   .vector--img {
-    transform: translate(-50%, -50%);
-  }
-}
-@media (max-width: 44em) {
-  .vector--img {
-    transform: translate(-10%, -280%);
+    transform: translate(-80%, -50%);
   }
 }
 @media (max-width: 44.44em) {
@@ -379,12 +394,28 @@
     overflow-x: hidden;
   }
   .vector--img {
-    transform: translate(-20%, -280%);
+    transform: translate(-50%, -60%);
   }
+  @media (max-width: 44em) {
+    .vector--img {
+      transform: translate(-10%, -280%);
+    }
+  }
+
   .hero {
     width: 100%;
     display: flex;
     flex-direction: column;
+  }
+}
+@media (max-width: 43.75em) {
+  .vector--img {
+    transform: translate(-50%, -50%);
+  }
+}
+@media (max-width: 37.5em) {
+  .vector--img {
+    transform: translate(-30%, -280%);
   }
 }
 @media (max-width: 34.4em) {
@@ -392,9 +423,19 @@
     transform: translate(-100%, -40%);
   }
 }
+@media (max-width: 34.25em) {
+  .vector--img {
+    transform: translate(-30%, -300%);
+  }
+}
 @media (max-width: 31.3em) {
   .vector--img {
     transform: translate(-20%, -300%);
+  }
+}
+@media (max-width: 29.75em) {
+  .vector--img {
+    transform: translate(-100%, -50%);
   }
 }
 @media (max-width: 28em) {
@@ -417,6 +458,11 @@
   }
   .slide {
     left: -18%;
+  }
+}
+@media (max-width: 24.5em) {
+  .vector--img {
+    transform: translate(-70%, -50%);
   }
 }
 @media (max-width: 24em) {
